# rust-rvsdg

./: Cargo.toml  README.md  flake.nix  prompt.fish
src/: edge.rs  entity_iterator.rs  id.rs  lib.rs  nodes.rs  tests.rs  xml.rs
src/opt/: mod.rs
