[package]
name = "rvsdg"
authors = ["Simon Larsson <simon.larsson-general@protonmail.com>"]
description = "Type-safe standalone implementation of the RVSDG IR with automatic Phi transformation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simvux/rvsdg"
readme = "README.md"
keywords = ["rvsdg", "compiler"]
categories = ["Compilers", "Data structures"]
documentation = "https://docs.rs/rvsdg"
version = "0.2.0"
edition = "2024"

[features]
default = []

[dependencies]
cranelift-entity = "0.120.0"
tracing = "0.1.44"
xmlwriter = "0.1.0"

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.4.0"
