[package]
name = "rvsdg"
authors = ["Simon Larsson <simon.larsson-general@protonmail.com>"]
description = "Type-safe standalone implementation of the RVSDG IR with automatic Phi transformation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/simvux/rvsdg"
readme = "README.md"
keywords = ["rvsdg", "compiler"]
categories = ["compilers", "data-structures"]
documentation = "https://docs.rs/rvsdg"
version = "0.2.0"
edition = "2024"

[features]
default = []
# egui = ["dep:egui", "dep:eframe"]

[dependencies]
clone_dyn = "0.62.0"
cranelift-entity = "0.120.0"
tracing = "0.1.44"
xmlwriter = "0.1.0"
# egui = { version = "0.31.1", optional = true }
# eframe = { version = "0.31.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"], optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.4.0"
